syntax = "proto3";

package network.scorum.v1;

import "gogoproto/gogo.proto";

import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/scorum/cosmos-network/x/scorum/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  repeated string supervisors = 1;

  cosmos.base.v1beta1.IntProto gas_limit = 2 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.IntProto gas_unconditioned_amount = 3 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.DecProto gas_adjust_coefficient = 4 [(gogoproto.nullable) = false];

  ValidatorsRewardParams validators_reward = 5 [(gogoproto.nullable) = false];
}

message ValidatorsRewardParams {
  string pool_address = 1;
  cosmos.base.v1beta1.Coin block_reward = 2 [(gogoproto.nullable) = false];
}